--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "gimmie-5-bot",
   "version": "1.0.0",
-  "description": "An automation of the Gimmie 5 app using a telegram bot",
+  "description": "An automation for the Gimmie 5 app using a telegram bot",
   "main": "index.ts",
   "author": "Sandro Baccega",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node index.ts"
+    "start": "ts-node src/index.ts"
   },
   "prettier": {
     "semi": false,
@@ -17,7 +17,11 @@
     "printWidth": 120
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^13.11.0",
+    "@types/node-fetch": "^2.5.7",
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.1",
     "ts-node": "^8.8.1",
     "typescript": "^4.0.3"
   }
