--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gimmie-5-bot",
+  "name": "gimme-5-bot",
   "version": "1.0.0",
-  "description": "An automation for the Gimmie 5 app using a telegram bot",
+  "description": "An automation for the Gimme 5 app using a telegram bot",
   "main": "index.ts",
   "author": "Sandro Baccega",
   "license": "MIT",
