--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/dotenv": "^8.2.0",
     "@types/node": "^13.11.0",
     "@types/node-fetch": "^2.5.7",
+    "@types/node-persist": "^3.1.0",
     "dotenv": "^8.2.0",
     "node-fetch": "^2.6.1",
+    "node-persist": "^3.1.0",
     "ts-node": "^8.8.1",
     "typescript": "^4.0.3"
   }
