--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,7 +14,7 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: gimme-5-automation
+  IMAGE_NAME: script
   
 jobs:
   build:
